Upgrade to Kotlin 1.1.2-3
Also removes JDK 9 build support for the time being since Gradle 3.5 still doesn't run on JDK 9.